<resources>

    <string name="app_name">CrowdSource</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CrowdSourced</string>
    <string name="title_activity_view_task">View Task</string>
    <string name="TaskObject">taskObject</string>
    <string name="addtask_actionbar">Add Task</string>
    <string name="title_activity_add_task">Add Task</string>

    <!-- AddTaskActivity items -->
    <string name="titleTextView_text">Title</string>
    <string name="enterTitleTextView_text">Enter task title.</string>
    <string name="dueDateTextView_text">Date Due:</string>
    <string name="selectDateButton_text">Select Date</string>
    <string name="descriptionTextView_text">Description:</string>
    <string name="enterDescriptionTextView_text">Enter description of your task.</string>
    <string name="dateTextView_text">Date</string>
    <string name="typeTextView_text">Type</string>
    <string name="quantityTextView_text">Quantity:</string>
    <string name="quantityButton_text">Choose Quantity</string>
    <string name="quantityChosenTextView_text">Choose Quantity</string>
    <string name="checkbox_text">Make Task Private</string>
    <string name="enterQuanity_text">Enter quantity of task.</string>
    <string name="save_text">Save</string>

    <string-array name="typeArray">
        <item>Text</item>
        <item>Photo</item>
        <item>Audio</item>
    </string-array>

    <string name="home_tab">Home</string>
    <string name="mytasks_tab">My Tasks</string>
    <string name="following_tab">Following</string>
    <string name="title_activity_my_tasks">My Tasks</string>
    <string name="log_tab">Log</string>
    <string name="Fulfill">Fulfill</string>
    <string name="Delete">Delete</string>
    <string name="Update">Update</string>
    <string name="MakePublic">Make Public</string>
    <string name="title_activity_update_task">Update Task</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_logged">ViewLoggedActivity</string>
    <string name="myPrivateTasksText">Private Tasks</string>
    <string name="myPublicTasksText">Public Tasks</string>
    <string name="title_activity_view_other_task">ViewOtherTaskActivity</string>
    <string name="Follow">Follow</string>
    <string name="tasktype_desc">Task Type</string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="title_activity_task_load_handler">TaskLoadHandler</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_record_audio">RecordAudioActivity</string>
    <string name="title_activity_choose_picture">ChoosePictureActivity</string>
    <string name="createdDateTextView_text">Date Created:</string>

</resources>