<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/titleTextView_text" />

    <EditText
        android:id="@+id/titleText"
        android:hint="@string/enterTitleTextView_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/titleTextView"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/dueDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/titleText"
        android:text="@string/dueDateTextView_text" />

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/quantityButton"
        android:layout_below="@+id/dueDateTextView"
        android:layout_marginLeft="5dp"
        android:text="@string/selectDateButton_text" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/selectDateButton"
        android:text="@string/descriptionTextView_text" />

    <EditText
        android:id="@+id/editText1"
        android:hint="@string/enterDescriptionTextView_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/descriptionTextView"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/editText1"
        android:text="@string/typeTextView_text" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/typeTextView"
        android:entries="@array/typeArray" />

    <TextView
        android:id="@+id/quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/typeSpinner"
        android:text="@string/quantityTextView_text" />

    <Button
        android:id="@+id/quantityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quantityTextView"
        android:layout_marginLeft="5dp"
        android:text="@string/quantityButton_text" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/selectDateButton"
        android:layout_alignBottom="@+id/selectDateButton"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/selectDateButton"
        android:text="@string/dateTextView_text" />

    <TextView
        android:id="@+id/quantityChosenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/quantityButton"
        android:layout_alignBottom="@+id/quantityButton"
        android:layout_alignLeft="@+id/dateTextView"
        android:text="@string/quantityChosenTextView_text" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/quantityButton"
        android:layout_marginTop="33dp"
        android:text="@string/checkbox_text" />

</RelativeLayout>
