<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/textEditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:hint="@string/titleTextView_text"
        tools:context=".UpdateTaskActivity" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_button_delete"
        android:text="@string/Cancel" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_button_save"
        android:text="@string/Save" />

    <TextView
        android:id="@+id/textLabelCreatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textEditTitle"
        android:text="@string/createdDateTextView_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkboxPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textEditCreatedDate"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_alignTop="@+id/textLabelCreatedDate"
        android:text="@string/MakePublic"
        android:textSize="12dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkboxPublic"
        android:layout_marginTop="5dp"
        android:contentDescription="@+id/tasktype_desc"
        android:src="@drawable/ic_tasktype_text" />

    <TextView
        android:id="@+id/textLabelDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignParentLeft="true"
        android:text="@string/dueDateTextView_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textEditCreatedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textLabelCreatedDate"
        android:hint="@string/dueDateTextView_text"
        android:textSize="12dp"
        android:layout_marginLeft="5dp"
        tools:context=".UpdateTaskActivity" />

    <TextView
        android:id="@+id/textEditDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/textLabelDueDate"
        android:hint="@string/dueDateTextView_text"
        android:textSize="12dp"
        tools:context=".UpdateTaskActivity" />

    <Button
        android:id="@+id/selectDate"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textLabelDueDate"
        android:layout_toRightOf="@+id/textLabelDueDate"
        android:minHeight="28dip"
        android:text="Edit" />

    <TextView
        android:id="@+id/textLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textEditDueDate"
        android:layout_marginTop="42dp"
        android:text="@string/descriptionTextView_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textEditDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textLabelDescription"
        android:ems="10"
        android:hint="@string/descriptionTextView_text"
        tools:context=".UpdateTaskActivity" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textLabelQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textEditDescription"
        android:layout_marginTop="18dp"
        android:text="@string/quantityTextView_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textEditQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textLabelQuantity"
        android:ems="10"
        android:hint="@string/quantityTextView_text"
        tools:context=".UpdateTaskActivity" />

</RelativeLayout>
